# wake-word-detector

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/wakeworddetector/: engine.py
