[tool.poetry]
name = "wake-word-detector"
version = "0.1.0"
description = ""
authors = ["RedbeanGit <dubois.julien.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openwakeword = "^0.6.0"
pyaudio = "^0.2.14"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
